MODUSERS-533: added minor boolean field in staging_user table and assigned appropriate patronGroup to user record